Added another project to portfolio

--- a/index.html
+++ b/index.html
@@ -62,21 +62,40 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="https://github.com/vrushali92/Berlin-Road-Accidents-Data-Analysis">Berlin Road Accidents Data analysis<br />
+									<h2><a href="https://github.com/vrushali92/Diabetes-Data-Analysis-and-Prediction">Diabetes Data Analysis and Prediction<br />
 									</a></h2>
-									<p>Berlin's public transport has always fascinated me. This intrigued me about its schedule management and accidents. The curiosity led me to do data analysis of accidents in Berlin.<br />
-										This project provides insights of Road accidents happenend in year 2019. The insights emphasizes on most dangerous streets, regions and weather conditions etc.<br />
+									<p>Diabetes is a global epidemic and a major public health concern. It affects millions of people worldwide, leading to serious complications if not managed properly. 
+										Developing a predictive model can help identify individuals at high risk of developing diabetes, enabling early intervention and implementing preventive measures. 
+										A diabetes prediction project serves as a showcase of the potential of artificial intelligence and machine learning in healthcare. 
+										It demonstrates how these technologies can be harnessed to improve medical outcomes and contribute to evidence-based decision-making.
+										<br />
 									</p>
 								</header>
-								<a href="https://github.com/vrushali92/Berlin-Road-Accidents-Data-Analysis" class="image main"><img src="images/Road_Accidents.jpeg" alt="" /></a>
+								<a href="https://github.com/vrushali92/Diabetes-Data-Analysis-and-Prediction" class="image main"><img src="images/Diabetes.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/vrushali92/Berlin-Road-Accidents-Data-Analysis" class="button large">View Project</a></li>
+									<li><a href="https://github.com/vrushali92/Diabetes-Data-Analysis-and-Prediction" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
+									
+									<header>
+										<!-- <span class="date">April 24, 2017</span> -->
+										<h2><a href="https://github.com/vrushali92/Berlin-Road-Accidents-Data-Analysis">Berlin Road Accidents Data analysis<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/vrushali92/Berlin-Road-Accidents-Data-Analysis" class="image fit"><img src="images/Road_Accidents.jpeg" alt="" /></a>
+									<p>Berlin's public transport has always fascinated me. This intrigued me about its schedule management and accidents. The curiosity led me to do data analysis of accidents in Berlin.<br />
+										This project provides insights of Road accidents happenend in year 2019. The insights emphasizes on most dangerous streets, regions and weather conditions etc.<br />
+									</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/vrushali92/Berlin-Road-Accidents-Data-Analysis" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+
 									<header>
 										<!-- <span class="date">April 24, 2017</span> -->
 										<h2><a href="https://github.com/vrushali92/India-Crop-Production-Data-Analysis">India's Crop Production Data Analysis<br />
